--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,60 @@
-# Compiled class file
-*.class
+import java.io.*;
+import java.math.*;
+import java.security.*;
+import java.text.*;
+import java.util.*;
+import java.util.concurrent.*;
+import java.util.regex.*;
 
-# Log file
-*.log
+public class Solution {
 
-# BlueJ files
-*.ctxt
+    // Complete the minimumBribes function below.
+    static void minimumBribes(int[] q) {
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+    int ans = 0;
+    for (int i = q.length - 1; i >= 0; i--) {
+        if (q[i] - (i + 1) > 2) {
+            //cout << "Too chaotic" << endl;
+            System.out.println("Too chaotic");
+            return;
+        }
+          //  int j = max(0, q[i] - 2);
+          int max = 0;
+          int bee = q[i] - 2;
+          if(bee > max ) { max = bee; }
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+        for (int j = max; j < i; j++)
+            if (q[j] > q[i]) ans++;
+    }
+   // cout << ans << endl;
+    System.out.println(ans);
+
+    }
+
+    private static final Scanner scanner = new Scanner(System.in);
+
+    public static void main(String[] args) {
+        int t = scanner.nextInt();
+        scanner.skip("(\r\n|[\n\r\u2028\u2029\u0085])?");
+
+        for (int tItr = 0; tItr < t; tItr++) {
+            int n = scanner.nextInt();
+            scanner.skip("(\r\n|[\n\r\u2028\u2029\u0085])?");
+
+            int[] q = new int[n];
+
+            String[] qItems = scanner.nextLine().split(" ");
+            scanner.skip("(\r\n|[\n\r\u2028\u2029\u0085])?");
+
+            for (int i = 0; i < n; i++) {
+                int qItem = Integer.parseInt(qItems[i]);
+                q[i] = qItem;
+            }
+
+            minimumBribes(q);
+        }
+
+        scanner.close();
+    }
+}
